fix : overflow height bg issue fixed

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -9,7 +9,7 @@
   /* Layout */
   .container {
     display: flex;
-    height: 100vh;
+    height: 100%;
     background-color: #000;
     color: white;
   }
